Fix overlapping for first list

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -904,7 +904,7 @@ footer {
     position: absolute;
     left: 0;
     right: 0;
-    z-index: 3;
+    z-index: 4;
   }
 
   .card-body {
